--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,7 +5,10 @@
       <ion-icon name="home-outline"></ion-icon>
       <ion-label></ion-label>
     </ion-tab-button>
-
+    <ion-tab-button tab="filter">
+      <ion-icon name="transgender-outline"></ion-icon>
+      <ion-label></ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="search">
       <ion-icon name="search-outline"></ion-icon>
       <ion-label></ion-label>
